--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -1,8 +1,8 @@
 /* main styles*/
 
 body {
-    background-color: #fff;
-    color: #2E2F42;
+    background-color: #fff;    
+    color:#434455;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -18,7 +18,7 @@ ul,ol {
 
 .logo {
     color:#4D5AE5;
-    font-family: Raleway;
+    font-family: Raleway, sans-serif;
     font-size: 18px;
     font-weight: 700;
     line-height: 1.17;
@@ -35,29 +35,26 @@ ul,ol {
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-
 .nav-item:hover,
 .nav-item:focus {
     color:#404BBF;
 }
 .studio:active {
     color:#404BBF;
-    text-decoration: underline 4px #404BBF;
-    
+    text-decoration: underline 4px #404BBF;    
 }
 
-.address:hover,
-.address:focus {
-    color: #404BBF;
-}
-
-
-.address {
-    color:#434455;
-    font-style: normal;   
+.address-link {
+    color: #434455;
+    font-style: normal;
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
+.address-link:hover,
+.address-link:focus {
+    color: #404BBF;
+}
+
  /*Hero section*/ 
 
 .hero {
@@ -71,7 +68,6 @@ ul,ol {
     letter-spacing: 0.02em;
     color: #FFF;    
 }
-
 .hero-button {
     font-family: 'Roboto', sans-serif;
     font-style: normal;
@@ -89,93 +85,62 @@ button:focus {
     background-color: #404BBF;
 }
 
-/* Section Features */
+/* Styles for sections */
 
-.features h2 {
+.hidden-header {
 display: none;
 }
 
-
-.features h3 {        
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-}
-.features p {    
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color:#434455;
-}
-
-/* Section Our-Team */
-
-.our-team {
-    background-color: #F4F4FD;
+.our-team {    
+    background-color: #F4F4FD;  
     text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
 }
-
-.our-team h2 {
+.section-header {    
+    color: #2E2F42;
+    text-align: center;
     font-size: 36px;
     font-weight: 700;
     line-height: 1.11;
+    text-transform: capitalize;
+    letter-spacing: 0.02em;
 }
-
-.our-team h3 {
+.section-header-item {
+    color: #2E2F42;
     font-size: 20px;
     font-weight: 500;
-    line-height: 1.2;        
+    line-height: 1.2;
+    letter-spacing:0.02em;
+}
+.section-text {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
-.our-team p {
-    line-height: 1.5;
-    color: #434455;
-}
-.our-team li {
+.team-card {
     background-color: #FFF;
+    text-align: center;
 }
 
 /* Our Portfolio */
 
 .portfolio {
-    border-color:#F4F4FD;    
+    border-color:#F4F4FD; 
 }
-.portfolio li {
+.portfolio-item {
     border-color:#E7E9FC;
     border-width: 1px;
-    border-style: solid;
-    letter-spacing: 0.02em;    
-}
-.portfolio h2 {
-    text-align: center;
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.11;
-    text-transform: capitalize;
-}
-.portfolio h3 {
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 1.2;    
-}
-.portfolio p {
-    color:#434455;
-    line-height: 1.5;
-
+    border-style: solid;        
 }
 
 /* Footer */
 
 footer {
     background-color: #2E2F42;
-
 }
 .logo-footer {
     color: #F4F4FD;
 }
-footer p {
+.footer-text {
     color:#F4F4FD;
     line-height: 1.5;
     letter-spacing: 0.02em;
